# HSuperMenu

./: .gitignore  CMakeLists.txt  README.md
Linux/: AppImageBuilder.yml
src/: heficience-menu.desktop  icon.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
